# libreinventory

./: .gitignore  README.md  com.otonielreyes.LibreInventory.json  meson.build
data/: com.otonielreyes.LibreInventory.appdata.xml.in  com.otonielreyes.LibreInventory.desktop.in  com.otonielreyes.LibreInventory.gschema.xml  meson.build
data/icons/: meson.build
po/: POTFILES  meson.build
resources/: uml.dia
src/: Application.vala  CustomersPage.vala  DashboardPage.vala  Main.vala  NewProductWindow.vala  ProductsPage.vala  VendorsPage.vala  Window.vala  application.vala  libreinventory.gresource.xml  main.vala  meson.build  window.ui  window.vala
src/SecretManagement/: DatabaseData.vala
src/Settings/Database/: ConfigGrid.vala  Window.vala
